[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Art Leo <gitulisca@github.com>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
